[metadata]
name = pyrennial
version = attr: pyrennial.__version__
description = Evergreen datasets
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/graphext/pyrennial
author = Graphext
author_email = thomasb@hey.com
keywords =
    datasets
    evergreen
    scraper
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/graphext/pyrennial

[options]
packages = find:
platforms = any
python_requires = >=3.8
install_requires =
    huggingface_hub
    lector @ git+https://github.com/graphext/lector.git@main#egg=lector
    pandas
    pyarrow
    tqdm
    typer

[aliases]
test=pytest

[options.entry_points]
console_scripts =

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    pre-commit
    ruff
    pyrennial[test]
